Fix login with google API